Initial commit from VS Code

--- a/TerraNova/index.html
+++ b/TerraNova/index.html
@@ -35,7 +35,7 @@
             </p>
             <div class="hero-btns">
                 <button class="getstarted-two">Get started</button>
-                <button class="explore-btn"><a href="#products">Explore products</a></button>
+                <a href="#products" class="explore-btn">Explore products</a>
             </div> 
         </section>
     </main>
@@ -288,7 +288,7 @@
         solar inspiration, straight to your inbox</p>
     <div class="newsletter-input">
       <input type="email" placeholder="Enter your email" />
-      <button type="submit"><img src="assets/lsicon_send-filled.png" alt=""></button>
+      <button type="submit" title="Subscribe to newsletter"><img src="assets/lsicon_send-filled.png" alt="Send"></button>
     </div>
   </div>
 
